--- a/Bai4_Git-Html/BaiTap/BaiTap_Git/BaiTap_TaoFileHtmlLenGitHub/html/news.html
+++ b/Bai4_Git-Html/BaiTap/BaiTap_Git/BaiTap_TaoFileHtmlLenGitHub/html/news.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Day la bai tap news.html</title>
 </head>
 <body>
-$END$
+    <h1>day la tieu de h1</h1>
 </body>
 </html>
