nop bai tap form and table

--- a/Bai5_Html_Form&Table/BaiTap/TaoBangNangCao_BanCoVua.html
+++ b/Bai5_Html_Form&Table/BaiTap/TaoBangNangCao_BanCoVua.html
@@ -1,127 +1,144 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Ban co vua</title>
     <style>
-        table tr, td {
-            border: 1px solid black;
-        }
-        table {
-            border-collapse: collapse;
+        table{
             font-family: Tahoma;
-            width: 600px;
-            height: 600px;
+            background-color: yellow;
+            border-collapse: collapse;
+            width: 900px;
+            height: 900px;
+            border: solid 1px black;
+        }
+         tr, td, th{
             text-align: center;
         }
-        tr:nth-child(odd){
-            background-color: grey;
+
+
+        table caption {
+            font-size: 36px;
         }
-        td:nth-child(odd){
-            background-color: grey;
+        .oDen{
+            background-color: black;
         }
+        .oTrang{
+            background-color: white;
+        }
+       .oDanhso th{
+           border: none;
+       }
+        .oDanhso td .oThutu{
+            border: none;
+        }
+
     </style>
 </head>
 <body>
 <table>
-    <tr>
-        <td> </td>
-        <td>1</td>
-        <td>2</td>
-        <td>3</td>
-        <td>4</td>
-        <td>5</td>
-        <td>6</td>
-        <td>7</td>
-        <td>8</td>
+    <caption >Ban co vua</caption>
+    <tr class="oDanhso">
+        <th></th>
+        <th>1</th>
+        <th>2</th>
+        <th>3</th>
+        <th>4</th>
+        <th>5</th>
+        <th>6</th>
+        <th>7</th>
+        <th>8</th>
     </tr>
-    <tr>
+    <tr style="border: none">
         <td>A</td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td class="oTrang"></td>
+        <td class="oDen"></td>
+        <td class="oTrang"></td>
+        <td class="oDen"></td>
+        <td class="oTrang"></td>
+        <td class="oDen"></td>
+        <td class="oTrang"></td>
+        <td class="oDen"></td>
     </tr>
     <tr>
-        <td>B</td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td style="border: none">B</td>
+        <td class="oDen"></td>
+        <td class="oTrang"></td>
+        <td class="oDen"></td>
+        <td class="oTrang"></td>
+        <td class="oDen"></td>
+        <td class="oTrang"></td>
+        <td class="oDen"></td>
+        <td class="oTrang"></td>
     </tr>
     <tr>
         <td>C</td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td class="oTrang"></td>
+        <td class="oDen"></td>
+        <td class="oTrang"></td>
+        <td class="oDen"></td>
+        <td class="oTrang"></td>
+        <td class="oDen"></td>
+        <td class="oTrang"></td>
+        <td class="oDen"></td>
     </tr>
     <tr>
         <td>D</td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td class="oDen"></td>
+        <td class="oTrang"></td>
+        <td class="oDen"></td>
+        <td class="oTrang"></td>
+        <td class="oDen"></td>
+        <td class="oTrang"></td>
+        <td class="oDen"></td>
+        <td class="oTrang"></td>
     </tr>
     <tr>
         <td>E</td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td class="oTrang"></td>
+        <td class="oDen"></td>
+        <td class="oTrang"></td>
+        <td class="oDen"></td>
+        <td class="oTrang"></td>
+        <td class="oDen"></td>
+        <td class="oTrang"></td>
+        <td class="oDen"></td>
     </tr>
     <tr>
         <td>F</td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td class="oDen"></td>
+        <td class="oTrang"></td>
+        <td class="oDen"></td>
+        <td class="oTrang"></td>
+        <td class="oDen"></td>
+        <td class="oTrang"></td>
+        <td class="oDen"></td>
+        <td class="oTrang"></td>
     </tr>
     <tr>
         <td>G</td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td class="oTrang"></td>
+        <td class="oDen"></td>
+        <td class="oTrang"></td>
+        <td class="oDen"></td>
+        <td class="oTrang"></td>
+        <td class="oDen"></td>
+        <td class="oTrang"></td>
+        <td class="oDen"></td>
     </tr>
     <tr>
         <td>H</td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td class="oDen"></td>
+        <td class="oTrang"></td>
+        <td class="oDen"></td>
+        <td class="oTrang"></td>
+        <td class="oDen"></td>
+        <td class="oTrang"></td>
+        <td class="oDen"></td>
+        <td class="oTrang"></td>
     </tr>
 </table>
 </body>
