--- a/Bai5_Html_Form&Table/BaiTap/TaoFormSoThichCuaBan.html
+++ b/Bai5_Html_Form&Table/BaiTap/TaoFormSoThichCuaBan.html
@@ -11,8 +11,8 @@
     </style>
 </head>
 <body>
-    <form action="TaoFormSoThichCuaBan.html">
-        <table style="width: 500px; border: aqua 10px solid" >
+    <form action="TaoFormSoThichCuaBan.html" method="get">
+        <table style="width: 500px; border: aqua 10px solid; height: 300px; margin: auto" >
             <tr>
                 <th COLSPAN="2" style="color: white; background: red">SO THICH CUA BAN:</th>
             </tr>
