--- a/Bai5_Html_Form&Table/BaiTap/TaoForm_SurveyKhachHang.html
+++ b/Bai5_Html_Form&Table/BaiTap/TaoForm_SurveyKhachHang.html
@@ -3,129 +3,160 @@
 <head>
     <meta charset="UTF-8">
     <title>Survey khach hang</title>
-</head>
+    <style>
+       .table_2{
+           border: 1px solid black;
+           width: 100%;
+           border-collapse: collapse;
+       }
+        .table_2 th{
+            padding: 5px;
+            border: 1px solid black;
+        }
+        .table_2 td{
+            padding: 5px;
+            border: 1px solid black;
+            text-align: center;
+        }
+        .table_2 tr:nth-child(odd){
+            background: #dddddd;
+        }
+        #table_1 tr #input_dollars input{
+            width: 50px;
+        }
+       #table_1 tr #input_cents input {
+           width: 30px;
+       }
+      .hover:hover{
+          background-color: lemonchiffon;
+      }
+    </style>
+  </head>
 <body>
 <form action="TaoForm_SurveyKhachHang.html" method="get">
     <h1>Market Research Survet</h1>
     <p>Please take a few moments to complete this satisfaction survet</p>
-    <h4>What is your age range?</h4>
-    <select name="age" id="age">
-        <option value="">18-24</option>
-        <option value="">25-29</option>
-        <option value="">30-35</option>
-        <option value="">35-40</option>
-    </select>
-    <h4>What is your yearly income range?</h4>
-    <select name="yearly" id="yearly">
-        <option value="">$0- $25.000</option>
-        <option value="">$25.000- $35.000</option>
-        <option value="">$35.000- $45.000</option>
-        <option value="">$45.000- $55.000</option>
-    </select>
-    <h4>Gender</h4>
-    <input type="radio" name="gioitinh" id="nam"> Male
-    <input type="radio" name="gioitinh" id="nu"> Female
-    <h4>Which of the following products have your purchased in th last 2 months. Please check all that apply.</h4>
-    <ul style="list-style-type: none">
-        <li>
-            <input type="checkbox" id="product1"> Product 1
-        </li>
-        <li>
-            <input type="checkbox" id="product2"> Product 2
-        </li>
-        <li>
-            <input type="checkbox" id="product3"> Product 3
-        </li>
-    </ul>
-    <h4>How often would you use our new products?</h4>
-    <ul style="list-style-type: none">
-        <li>
-            <input type="radio" name="using" id="daily"> Daily
-        </li>
-        <li>
-            <input type="radio" name="using" id="weekly"> Weekly
-        <li>
-            <input type="radio" name="using" id="monthly"> Monthly
-        </li>
-    </ul>
+    <div class="hover">
+        <h4>What is your age range?</h4>
+        <select name="age" id="age">
+            <option value="">18-24</option>
+            <option value="">25-29</option>
+            <option value="">30-35</option>
+            <option value="">35-40</option>
+        </select>
+    </div>
+    <div class="hover">
+        <h4>What is your yearly income range?</h4>
+        <select name="yearly" id="yearly">
+            <option value="">$0- $25.000</option>
+            <option value="">$25.000- $35.000</option>
+            <option value="">$35.000- $45.000</option>
+            <option value="">$45.000- $55.000</option>
+        </select>
+    </div>
+    <div class="hover">
+        <h4>Gender</h4>
+        <input type="radio" name="gioitinh" id="nam"> Male <br>
+        <input type="radio" name="gioitinh" id="nu"> Female
+    </div>
+    <div class="hover">
+        <h4>Which of the following products have your purchased in th last 2 months. Please check all that apply.</h4>
+            <input type="checkbox" id="product1"> Product 1 <br>
+            <input type="checkbox" id="product2"> Product 2 <br>
+            <input type="checkbox" id="product3"> Product 3 <br>
+    </div>
+    <div class="hover">
+        <h4>How often would you use our new products?</h4>
+            <input type="radio" name="using" id="daily"> Daily <br>
+            <input type="radio" name="using" id="weekly"> Weekly <br>
+            <input type="radio" name="using" id="monthly"> Monthly <br>
+    </div>
+    <div class="hover">
     <h4>What would you pay for the new product?</h4>
-    <table>
-        <tr>
-            <td>$</td>
-            <td>
-                <input type="text" id="Dollars">
-            </td>
-            <td>.</td>
-            <td>
-                <input type="text " id="Cents">
-            </td>
-        </tr>
-        <tr>
-            <td> </td>
-            <td>Dollars</td>
-            <td> </td>
-            <td>Cents</td>
-        </tr>
-    </table>
-    <h4>What features would you like to see in the product?</h4>
-    <textarea name="newProduct" id="newProduct" cols="60" rows="5"></textarea>
-    <p>Please rate your level of agreement wiht the following statements.</p>
-    <table style="height: 150px; width: 800px; border: 1px solid black">
-        <tr style="height: 25%">
-            <th width="40%"></th>
-            <th>Strongly Disagree</th>
-            <th>Disagree</th>
-            <th>Agree</th>
-            <th>Strongly Agree</th>
-        </tr>
-        <tr style="height: 25%">
-            <Td><h4>Our products are priced fairly</h4></Td>
-            <Td style="width: 15%">
-                <input type="radio" name="agreement" id="1">1
-            </Td>
-            <Td style="width: 15%">
-                <input type="radio" name="agreement" id="2">2
-            </Td>
-            <Td style="width: 15%">
-                <input type="radio" name="agreement" id="3">3
-            </Td>
-            <Td style="width: 15%">
-                <input type="radio" name="agreement" id="4">4
-            </Td>
-        </tr>
-        <tr style="height: 25%">
-            <Td><h4>Our products are high quality</h4></Td>
-            <Td>
-                <input type="radio" name="agreement" id="1">1
-            </Td>
-            <Td>
-                <input type="radio" name="agreement" id="2">2
-            </Td>
-            <Td>
-                <input type="radio" name="agreement" id="3">3
-            </Td>
-            <Td>
-                <input type="radio" name="agreement" id="4">4
-            </Td>
-        </tr>
-        <tr style="height: 25%">
-            <Td><h4>You would recommend our product to a friend or coworker.</h4></Td>
-            <Td>
-                <input type="radio" name="agreement" id="1">1
-            </Td>
-            <Td>
-                <input type="radio" name="agreement" id="2">2
-            </Td>
-            <Td>
-                <input type="radio" name="agreement" id="3">3
-            </Td>
-            <Td>
-                <input type="radio" name="agreement" id="4">4
-            </Td>
-        </tr>
-    </table>
+        <table id="table_1">
+            <tr>
+                <td>$</td>
+                <td id="input_dollars">
+                    <input type="text" id="Dollars">
+                </td>
+                <td>.</td>
+                <td id="input_cents">
+                    <input type="text " id="Cents">
+                </td>
+            </tr>
+            <tr>
+                <td> </td>
+                <td>Dollars</td>
+                <td> </td>
+                <td>Cents</td>
+            </tr>
+        </table>
+    </div>
+    <div class="hover">
+        <h4>What features would you like to see in the product?</h4>
+        <textarea name="newProduct" id="newProduct" cols="60" rows="5"></textarea>
+    </div>
+    <div class="hover">
+        <p>Please rate your level of agreement wiht the following statements.</p>
+        <table class="table_2">
+            <tr style="height: 50px">
+                <th></th>
+                <th>Strongly Disagree</th>
+                <th>Disagree</th>
+                <th>Agree</th>
+                <th>Strongly Agree</th>
+            </tr>
+            <tr style="height: 50px">
+                <Td style="width: 40%; text-align: left"><h4>Our products are priced fairly</h4></Td>
+                <Td style="width: 15%">
+                    <input type="radio" name="agreement" id="1"><br>1
+                </Td>
+                <Td style="width: 15%">
+                    <input type="radio" name="agreement" id="2"> <br>2
+                </Td>
+                <Td style="width: 15%">
+                    <input type="radio" name="agreement" id="3"> <br>3
+                </Td>
+                <Td style="width: 15%">
+                    <input type="radio" name="agreement" id="4"> <br>4
+                </Td>
+            </tr>
+            <tr style="height: 50px">
+                <Td style="text-align: left"><h4>Our products are high quality</h4></Td>
+                <Td>
+                    <input type="radio" name="agreement" id="1"> <br>1
+                </Td>
+                <Td>
+                    <input type="radio" name="agreement" id="2"> <br>2
+                </Td>
+                <Td>
+                    <input type="radio" name="agreement" id="3"> <br>3
+                </Td>
+                <Td>
+                    <input type="radio" name="agreement" id="4"> <br>4
+                </Td>
+            </tr>
+            <tr style="height: 50px">
+                <Td style="text-align: left"><h4>You would recommend our product to a friend or coworker.</h4></Td>
+                <Td>
+                    <input type="radio" name="agreement" id="1"> <br>1
+                </Td>
+                <Td>
+                    <input type="radio" name="agreement" id="2"> <br>2
+                </Td>
+                <Td>
+                    <input type="radio" name="agreement" id="3"><br>3
+                </Td>
+                <Td>
+                    <input type="radio" name="agreement" id="4"><br>4
+                </Td>
+            </tr>
+        </table>
+    </div>
     <br>
-    <input type="submit" value="Submit">
+    <div class="hover">
+        <input type="submit" value="Submit">
+    </div>
 </form>
 </body>
 </html>
