--- a/Bai5_Html_Form&Table/ThucHanh/TaoFormCoBan.html
+++ b/Bai5_Html_Form&Table/ThucHanh/TaoFormCoBan.html
@@ -7,6 +7,12 @@
         .wufoo{
             font-family: "Lucida Sans Unicode" Tahoma, sans-serif;
         }
+        form{
+            border: 1px solid black;
+            width: 300px;
+            margin: auto;
+            padding: 20px;
+        }
     </style>
 </head>
 <body>
