--- a/Bai5_Html_Form&Table/ThucHanh/TaoFormTimKiemGoogle.html
+++ b/Bai5_Html_Form&Table/ThucHanh/TaoFormTimKiemGoogle.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <form action="https://www.google.com.vn/search" method="get">
-        <input type="text"/>
+        <input type="text" name="q"/>
         <input type="submit" value="Tim kiem"/>
     </form>
 </body>
