update bài thuc hanh

--- a/Bai10_CauTrucVongLap/ThucHanh/Bai3.html
+++ b/Bai10_CauTrucVongLap/ThucHanh/Bai3.html
@@ -2,9 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Title</title>
 </head>
 <body>
-$END$
+<script>
+    let num;
+    let total;
+    while (num!=1){
+       let num=prompt('Nhập một số: ');
+        alert(num);
+        total+=num;
+        alert('tổng là : '+total);
+    }
+</script>
 </body>
 </html>
